--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/potato-wedges.html">Potato Wedges</a>
+    <ul>
+        <li><a href="./recipes/potato-wedges.html">Potato Wedges</a></li>
+        <li><a href="./recipes/burger.html"></a>Burger</li>
+        <li><a href="./recipes/roast-broccoli.html"></a>Roast Broccoli</li>
+    </ul>
 </body>
 </html>
