Fix homepage links

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/potato-wedges.html">Potato Wedges</a></li>
-        <li><a href="./recipes/burger.html"></a>Burger</li>
-        <li><a href="./recipes/roast-broccoli.html"></a>Roast Broccoli</li>
+        <li><a href="./recipes/burger.html">Burger</a></li>
+        <li><a href="./recipes/roast-broccoli.html">Roast Broccoli</a></li>
     </ul>
 </body>
 </html>
