--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes Project</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/potato-wedges.html">Potato Wedges</a></li>
-        <li><a href="./recipes/burger.html">Burger</a></li>
-        <li><a href="./recipes/roast-broccoli.html">Roast Broccoli</a></li>
-    </ul>
+    <div class="container">
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/potato-wedges.html">Potato Wedges</a></li>
+            <li><a href="./recipes/burger.html">Burger</a></li>
+            <li><a href="./recipes/roast-broccoli.html">Roast Broccoli</a></li>
+        </ul>
+    </div>
 </body>
 </html>
