--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Burger</h1>
-    <img src="../images/burger.jpg" alt="image of a burger">
-    <h2>Description</h2>
-    <p>These burger patties are made with ground beef and an easy bread crumb mixture. Nothing beats a simple hamburger on a warm summer evening. Pile these burgers with your favorite condiments and pop open a cool drink!</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 large egg</li>
-        <li>½ teaspoon salt</li>
-        <li>½ teaspoon ground black pepper</li>
-        <li>1 pound ground beef</li>
-        <li>½ cup fine dry bread crumbs</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
-        <li>Whisk together egg, salt, and pepper in a medium bowl.</li>
-        <li>Add ground beef and bread crumbs and mix with your hands or a fork until well blended.</li>
-        <li>Form into four 3/4-inch-thick patties.</li>
-        <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
-        <li>Serve hot and enjoy!</li>
-    </ol>
+    <div class="container">
+        <h1>Burger</h1>
+        <img src="../images/burger.jpg" alt="image of a burger">
+        <h2>Description</h2>
+        <p>These burger patties are made with ground beef and an easy bread crumb mixture. Nothing beats a simple hamburger on a warm summer evening. Pile these burgers with your favorite condiments and pop open a cool drink!</p>
+        <div class="ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1 large egg</li>
+                <li>½ teaspoon salt</li>
+                <li>½ teaspoon ground black pepper</li>
+                <li>1 pound ground beef</li>
+                <li>½ cup fine dry bread crumbs</li>
+            </ul>
+        </div>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
+            <li>Whisk together egg, salt, and pepper in a medium bowl.</li>
+            <li>Add ground beef and bread crumbs and mix with your hands or a fork until well blended.</li>
+            <li>Form into four 3/4-inch-thick patties.</li>
+            <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
+        <a href="../index.html" class="back-button">Go Back</a>
+    </div>
 </body>
 </html>
