--- a/recipes/roast-broccoli.html
+++ b/recipes/roast-broccoli.html
@@ -4,23 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roast Broccoli Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Roast Broccoli</h1>
-    <img src="../images/roast-broccoli.jpg" alt="image of roasted broccoli">
-    <h2>Description</h2>
-    <p>Roasted broccoli is easy to make and so much more flavorsome than boiled. My favorite part is the roasted sliced stem pieces.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>14 ounces broccoli</li>
-        <li>1 tablespoon olive oil</li>
-        <li>salt and ground black pepper to taste</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
-        <li>Cut broccoli florets from the stalk. Peel the stalk and slice into 1/4-inch slices. Mix florets and stem pieces with olive oil in a bowl and transfer to a baking sheet; season with salt and pepper.</li>
-        <li>Roast in the preheated oven until broccoli is tender and lightly browned, about 18 to 20 minutes.</li>
-    </ol>
+    <div class="container">
+        <h1>Roast Broccoli</h1>
+        <img src="../images/roast-broccoli.jpg" alt="image of roasted broccoli">
+        <h2>Description</h2>
+        <p>Roasted broccoli is easy to make and so much more flavorsome than boiled. My favorite part is the roasted sliced stem pieces.</p>
+        <div class="ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>14 ounces broccoli</li>
+                <li>1 tablespoon olive oil</li>
+                <li>salt and ground black pepper to taste</li>
+            </ul>
+        </div>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
+            <li>Cut broccoli florets from the stalk. Peel the stalk and slice into 1/4-inch slices. Mix florets and stem pieces with olive oil in a bowl and transfer to a baking sheet; season with salt and pepper.</li>
+            <li>Roast in the preheated oven until broccoli is tender and lightly browned, about 18 to 20 minutes.</li>
+        </ol>
+        <a href="../index.html" class="back-button">Go Back</a>
+    </div>
 </body>
 </html>
